force-app/main/default/objects/cogn__Search_Parametrs__c/cogn__Search_Parametrs__c.object-meta.xml
<CustomObject>
    <label>Search Parametrs</label>
    <nameField>
        <label>Search Parametrs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Parametrs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>