force-app/main/default/objects/cogn__Search_Parametrs__c/fields/cogn__Parametr__c.field-meta.xml
<CustomField>
    <fullName>cogn__Parametr__c</fullName>
    <label>Parametr</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>