force-app/main/default/objects/cogn__Search_Parametrs__c/fields/cogn__Share__c.field-meta.xml
<CustomField>
    <fullName>cogn__Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share</label>
    <type>Checkbox</type>
</CustomField>